# nitpick-styles

./: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
styles/: editorconfig.toml  nitpick-base.toml
styles/black/: default.toml
styles/flake8/: default.toml
styles/isort/: default.toml
styles/poetry/: default.toml
styles/pylint/: default.toml
styles/pytest/: default.toml
