[tool.poetry]
name = "nitpick-styles"
version = "0.0.0"
description = "Collection of nitpick styles"
authors = ["Kyle Finley <kyle@finley.sh>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
nitpick = "^0.26.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
